--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -53,7 +53,15 @@
 				spring-boot-starter-web
 			</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
+			<groupId>
+				org.springframework.boot
+			</groupId>
+			<artifactId>
+				spring-boot-starter-jdbc
+			</artifactId>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>
 				org.springframework
 			</groupId>
@@ -63,7 +71,7 @@
 			<version>
 				5.3.12
 			</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>
 				com.fasterxml.jackson.core
@@ -75,17 +83,14 @@
 				2.13.1
 			</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>
 				org.postgresql
 			</groupId>
 			<artifactId>
 				postgresql
 			</artifactId>
-			<version>
-				42.7.0
-			</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>
 				org.yaml
