--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 server.port=9090
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/qiwi-proxy-emulator
-spring.datasource.username=postgres
-spring.datasource.password=psql
+# spring.datasource.url=jdbc:postgresql://localhost:5432/qiwi-proxy-emulator
+# spring.datasource.username=postgres
+# spring.datasource.password=psql
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
